* Fixed spelling of Mantle * Added facebook comments to each photo.  Still have to fix stuck loading indicator

--- a/scc.css
+++ b/scc.css
@@ -240,3 +240,4 @@ blockquote
 	font-size:.9em;
 	font-family:"Helvetica Neue";
 }
+.fb-comments, .fb-comments iframe[style] {width: 100% !important;}
